set color for selected button updated icons removed ui test

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ retrofit2 = "3.0.0"
 gsonConverter = "3.0.0"
 okhttp = "5.1.0"
 ksp = "2.2.20-2.0.3"
+navigationCompose = "2.9.5"
+composeMaterial = "1.9.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,7 +41,8 @@ retrofit2 = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = 
 gson-converter = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "gsonConverter" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
-
+navigation-compose = {group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose"}
+compose-material = {group = "androidx.compose.material", name = "material", version.ref = "composeMaterial"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
