--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.12.3"
+agp = "8.13.0"
 hiltAndroid = "2.57.2"
 kotlin = "2.2.20"
 coreKtx = "1.17.0"
@@ -38,6 +38,7 @@ okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhtt
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 navigation-compose = {group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose"}
 compose-material = {group = "androidx.compose.material", name = "material", version.ref = "composeMaterial"}
+google-fonts = {group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "composeMaterial"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
