--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ okhttp = "5.1.0"
 ksp = "2.2.20-2.0.3"
 navigationCompose = "2.9.5"
 composeMaterial = "1.9.2"
+hiltNavigationCompose = "1.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,6 +40,7 @@ okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor",
 navigation-compose = {group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose"}
 compose-material = {group = "androidx.compose.material", name = "material", version.ref = "composeMaterial"}
 google-fonts = {group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "composeMaterial"}
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
