--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.13.0"
+glideCompose = "1.0.0-beta08"
 hiltAndroid = "2.57.2"
 kotlin = "2.2.20"
 coreKtx = "1.17.0"
@@ -19,6 +20,7 @@ hiltNavigationCompose = "1.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+glide-compose = { module = "com.github.bumptech.glide:compose", version.ref = "glideCompose" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
