--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 agp = "8.13.0"
-glideCompose = "1.0.0-beta08"
 hiltAndroid = "2.57.2"
 kotlin = "2.2.20"
 coreKtx = "1.17.0"
@@ -17,10 +16,10 @@ ksp = "2.2.20-2.0.3"
 navigationCompose = "2.9.5"
 composeMaterial = "1.9.2"
 hiltNavigationCompose = "1.3.0"
+landscapistGlide = "2.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-glide-compose = { module = "com.github.bumptech.glide:compose", version.ref = "glideCompose" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -43,6 +42,7 @@ navigation-compose = {group = "androidx.navigation", name = "navigation-compose"
 compose-material = {group = "androidx.compose.material", name = "material", version.ref = "composeMaterial"}
 google-fonts = {group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "composeMaterial"}
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+landscapist-glide = {group = "com.github.skydoves", name = "landscapist-glide", version.ref = "landscapistGlide"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
