--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,7 +45,7 @@ google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", v
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 landscapist-glide = { group = "com.github.skydoves", name = "landscapist-glide", version.ref = "landscapistGlide" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "roomVersion" }
-room-compile = { group = "androidx.room ", name = "room-compiler", version.ref = "roomVersion" }
+room-compile = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion" }
 
 [plugins]
@@ -55,7 +55,8 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 android-library = { id = "com.android.library", version.ref = "agp" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+room = { id = "androidx.room", version.ref = "roomVersion" }
 
 [bundles]
 network = ["gson-converter", "retrofit2", "okhttp", "okhttp-logging"]
-room = ["room-runtime", "room-ktx", "room-compile"]
+room = ["room-runtime", "room-ktx"]
