--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ coreKtx = "1.17.0"
 junit = "4.13.2"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
-composeBom = "2025.09.01"
+composeBom = "2025.10.00"
 appcompat = "1.7.1"
 material = "1.13.0"
 retrofit2 = "3.0.0"
@@ -14,12 +14,13 @@ gsonConverter = "3.0.0"
 okhttp = "5.1.0"
 ksp = "2.2.20-2.0.3"
 navigationCompose = "2.9.5"
-composeMaterial = "1.9.2"
+composeMaterial = "1.9.3"
 hiltNavigationCompose = "1.3.0"
 landscapistGlide = "2.6.1"
-roomVersion = "2.8.1"
+roomVersion = "2.8.2"
 timber = "5.0.1"
-uiTooling = "1.9.2"
+paginationVersion = "3.3.6"
+paginationCompose = "3.4.0-alpha04"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -50,7 +51,9 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-compile = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
-androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
+pagination-runtime = {group = "androidx.paging", name = "paging-runtime", version.ref = "paginationVersion" }
+pagination-compose = {group = "androidx.paging", name = "paging-compose", version.ref = "paginationCompose"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
